Use Java 17 features and code cleanup