@@ -2,18 +2,18 @@ package com.smartbear.jenkins.plugins.testcomplete;
 
 import hudson.Launcher;
 import hudson.Proc;
+import java.nio.charset.StandardCharsets;
 import org.apache.commons.lang.StringUtils;
 
 import jakarta.annotation.Nonnull;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.Collection;
 import java.util.regex.Pattern;
 
 public class CustomDecoratedLauncher extends Launcher.DecoratedLauncher {
 
-    private final static String MASKED_PASSWORD = "********";
+    private static final String MASKED_PASSWORD = "********";
     private Pattern passwordsAsPattern;
 
     public CustomDecoratedLauncher(@Nonnull Launcher inner, Collection<String> passwords) {
@@ -21,7 +21,7 @@ public class CustomDecoratedLauncher extends Launcher.DecoratedLauncher {
 
         passwordsAsPattern = null;
 
-        if((passwords != null && passwords.size() > 0)) {
+        if((passwords != null && !passwords.isEmpty())) {
             StringBuilder regex = new StringBuilder().append('(');
 
             int nbMaskedPasswords = 0;
@@ -30,16 +30,12 @@ public class CustomDecoratedLauncher extends Launcher.DecoratedLauncher {
                 if(StringUtils.isNotEmpty(password)) {
                     regex.append(Pattern.quote(password));
                     regex.append('|');
-                    try {
-                        String encodedPassword = URLEncoder.encode(password, "UTF-8");
-                        if (!encodedPassword.equals(password)) {
-                            regex.append(Pattern.quote(encodedPassword));
-                            regex.append('|');
-                        }
-                    } catch (UnsupportedEncodingException e) {
-                        // ignore
-                    }
-                    nbMaskedPasswords++;
+                  String encodedPassword = URLEncoder.encode(password, StandardCharsets.UTF_8);
+                  if (!encodedPassword.equals(password)) {
+                      regex.append(Pattern.quote(encodedPassword));
+                      regex.append('|');
+                  }
+                  nbMaskedPasswords++;
                 }
             }
 
@@ -53,7 +49,7 @@ public class CustomDecoratedLauncher extends Launcher.DecoratedLauncher {
 
     @Override
     public Proc launch(ProcStarter ps) throws IOException {
-        String[] cmdCopy = ps.cmds().toArray(new String[ps.cmds().size()]);
+        String[] cmdCopy = ps.cmds().toArray(new String[0]);
 
         if(passwordsAsPattern != null) {
             for (int i = 0; i < cmdCopy.length; i++) {
